[package]
name = "rchan"
version = "0.3.0"
edition = "2018"
description = "4chan api wrapper and client."
authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/insomnimus/rchan"
keywords = [
	"4chan", "api", "client", "image-board", "http",
]
categories = [ "api-bindings" ]

[features]
default = ["native-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.11.4", default-features = false }
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
